crt: Add support for C95 (v)swprintf() functions when __USE_MINGW_ANSI_STDIO=0
msvcr80+ has following wide-buffer swprintf like function symbols, none of
them is compatible with C95 (v)swprintf function, differences are:

  _(v)swprintf   - does not take buffer size argument, like non-wide C89
                   sprintf
  _(v)snwprintf  - does not fill nul-term wide char if there is not space
                   for it, like non-wide msvcr _(v)snprintf
  _(v)swprintf_c - clears the first wide character in buffer on error
                   (error means that there is no space for nul-term or
                   conversion error occurred)

Version before msvcr80 has following function symbols:

  _(v)snwprintf - same as in msvcrt80+
  (v)swprintf - same as _(v)swprintf in msvcrt80+

There is no (v)swprintf symbol in msvcr80+ (neither in UCRT) and there are
no _(v)swprintf_c/_(v)swprintf symbols before msvcr80.

Additionally msvcr80+ header files defines (v)swprintf() function as inline
wrapper function around _vswprintf_c_l() with NULL locale, which is same as
_vswprintf_c(). Therefore that msvcr80+ inline function (v)swprintf() is
not C95 compatible.

UCRT header files provides all those msvcr80+ swprintf family functions
defined as inline. But UCRT changed behavior of _(v)swprintf_c function,
on error it does not clear the first wide character in buffer, but instead
puts the nul wide character at current position. So with this change the
(v)swprintf() function definition in UCRT header file is C95 compatible.

mingw-w64 header files declares and defines (v)swprintf() without the
buffer size argument, matching the pre-msvcr80 (v)swprintf symbol. So
mingw-w64 has currently broken C95+ support for swprintf(), vswprintf(),
__ms_swprintf() and __ms_vswprintf() symbols, and for swprintf() and
vswprintf() functions provided by mingw-w64 header files when macro
__USE_MINGW_ANSI_STDIO is set to 0 (which is default for UCRT).

Fix this issue.

Ensure that swprintf and vswprintf

--- a/mingw-w64-crt/lib-common/msvcrt.def.in
+++ b/mingw-w64-crt/lib-common/msvcrt.def.in
@@ -1081,7 +1081,7 @@ strtok
 strtol
 strtoul
 strxfrm
-swprintf
+F_X86_ANY(_swprintf == swprintf) ; rename i386 and x64 swprintf to _swprintf (ARM already provided _swprintf) for compatibility with msvcr80+, real C95+ compatible swprintf provided by mingw-w64
 swscanf
 system
 tan
@@ -1099,7 +1099,7 @@ vfprintf
 vfwprintf
 vprintf
 vsprintf
-vswprintf
+F_X86_ANY(_vswprintf == vswprintf) ; rename i386 and x64 vswprintf to _vswprintf (ARM already provided _vswprintf) for compatibility with msvcr80+, real C95+ compatible vswprintf provided by mingw-w64
 vwprintf
 wcscat
 wcschr
@@ -1663,7 +1663,7 @@ _strupr_l
 _strupr_s
 _strupr_s_l
 _strxfrm_l
-_swprintf F_X86_ANY(== swprintf) ; i386 and x64 _swprintf replaced by alias
+F_ARM_ANY(_swprintf) ; i386 and x64 _swprintf replaced by renamed swprintf symbol
 _swprintf_c
 _swprintf_c_l
 _swprintf_p_l
@@ -1722,7 +1722,7 @@ _vsprintf_l
 _vsprintf_p
 _vsprintf_p_l
 _vsprintf_s_l
-_vswprintf F_X86_ANY(== vswprintf) ; i386 and x64 _vswprintf replaced by alias
+F_ARM_ANY(_vswprintf) ; i386 and x64 _vswprintf replaced by renamed vswprintf symbol
 _vswprintf_c
 _vswprintf_c_l
 _vswprintf_l
@@ -1903,7 +1903,6 @@ F_I386(_libm_sse2_tan_precise)
 
 
 ; This includes list of some symbol alises for compatibility with C99 and POSIX functions and symbols from other msvcr* libraries
-#define PRE_C95_SWPRINTF
 #define FIXED_SIZE_SYMBOLS
 #define NO_FIXED_SIZE_64_ALIAS
 #define NO_TIME_ALIAS
