--- a/mingw-w64-crt/lib32/msvcr71.def.in
+++ b/mingw-w64-crt/lib32/msvcr71.def.in
@@ -849,7 +849,7 @@ strtok
 strtol
 strtoul
 strxfrm
-swprintf
+_swprintf == swprintf ; rename swprintf to _swprintf for compatibility with msvcr80+, real C95+ compatible swprintf provided by mingw-w64
 swscanf
 system
 tan
@@ -867,7 +867,7 @@ vfprintf
 vfwprintf
 vprintf
 vsprintf
-vswprintf
+_vswprintf == vswprintf ; rename vswprintf to _vswprintf for compatibility with msvcr80+, real C95+ compatible vswprintf provided by mingw-w64
 vwprintf
 wcscat
 wcschr
@@ -894,7 +894,6 @@ wctomb
 wprintf
 wscanf
 
-#define PRE_C95_SWPRINTF
 #define FIXED_SIZE_SYMBOLS
 #define NO_STRCMPI_ALIAS
 #define WITH_NEXTAFTER_ALIAS
