--- a/mingw-w64-crt/lib32/msvcrt10.def.in
+++ b/mingw-w64-crt/lib32/msvcrt10.def.in
@@ -1249,7 +1249,7 @@ strtok
 strtol
 strtoul
 strxfrm
-swprintf
+_swprintf == swprintf ; rename swprintf to _swprintf for compatibility with msvcr80+, real C95+ compatible swprintf provided by mingw-w64
 swscanf
 system
 tan
@@ -1267,7 +1267,7 @@ vfprintf
 vfwprintf
 vprintf
 vsprintf
-vswprintf
+_vswprintf == vswprintf ; rename vswprintf to _vswprintf for compatibility with msvcr80+, real C95+ compatible vswprintf provided by mingw-w64
 vwprintf
 wcscat
 wcschr
@@ -1294,7 +1294,6 @@ wctomb
 wprintf
 wscanf
 
-#define PRE_C95_SWPRINTF
 #define FIXED_SIZE_SYMBOLS
 #define NO_WIDE_FIXED_SIZE
 #define NO_I64_FIXED_SIZE
