--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -4190,6 +4190,9 @@ testcase_progs = \
   testcases/t_matherr \
   testcases/t_nullptrexception \
   testcases/t_readdir \
+  testcases/t_snprintf \
+  testcases/t_snprintf0 \
+  testcases/t_snprintf1 \
   testcases/t_setjmp \
   testcases/t_sigv \
   testcases/t_speed_powl \
