crt: Add _stprintf test
This is test for MS-specific _stprintf() function. All test variants passes
also when compiled with MSVC compiler and run under msvcrt or UCRT runtime.

Note that gcc throws sprintf format warning for %hs usage in this test.
It is because gcc thinks that %hs takes unsigned short* argument.
But this is incorrect expectation, as all msvcrt and UCRT runtime versions
expect char* argument for %hs format. So this gcc format warning for %hs is
a gcc's bug.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -4199,6 +4199,12 @@ testcase_progs = \
   testcases/t_snwprintf \
   testcases/t_snwprintf0 \
   testcases/t_snwprintf1 \
+  testcases/t_stprintf_a \
+  testcases/t_stprintf_u \
+  testcases/t_stprintf0_a \
+  testcases/t_stprintf0_u \
+  testcases/t_stprintf1_a \
+  testcases/t_stprintf1_u \
   testcases/t_setjmp \
   testcases/t_sigv \
   testcases/t_speed_powl \
