crt: crtdll and msvcrt10: Add support for C95 getwc(), getwchar(), putwc(), putwchar() functions
All CRT libraries provide fgetwc, _fgetwchar, fputwc and _fputwchar
symbols. They are aliases of the C95 functions getwc, getwchar, putwc and
putwchar.

CRT libraries crtdll.dll and msvcrt10.dll do not export these functions
under C95 names. So define aliases in def files for C95+ compatibility.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/def-include/crt-aliases.def.in
+++ b/mingw-w64-crt/def-include/crt-aliases.def.in
@@ -231,6 +231,12 @@ ADD_UNDERSCORE(y1)
 ADD_UNDERSCORE(yn)
 
 ; This is list of symbol aliases for C95 functions
+#ifdef WITH_GET_PUT_WCHAR_ALIASES
+getwc == fgetwc
+getwchar == _fgetwchar
+putwc == fputwc
+putwchar == _fputwchar
+#endif
 #ifdef USE_WCSTOK_S_FOR_WCSTOK
 wcstok == wcstok_s
 #endif
