--- a/mingw-w64-crt/lib32/msvcrt10.def.in
+++ b/mingw-w64-crt/lib32/msvcrt10.def.in
@@ -1300,4 +1300,5 @@ wscanf
 #define NO_FPOS64_ALIASES
 #define NO_STRCMPI_ALIAS
 #define WITH_NEXTAFTER_ALIAS
+#define WITH_GET_PUT_WCHAR_ALIASES
 #include "crt-aliases.def.in"
