--- a/mingw-w64-crt/lib-common/msvcrt.def.in
+++ b/mingw-w64-crt/lib-common/msvcrt.def.in
@@ -1444,7 +1444,7 @@ F_ARM_ANY(_gmtime32_s) ; i386 and x64 _gmtime32_s replaced by emu
 F_ARM_ANY(_gmtime64_s) ; i386 and x64 _gmtime64_s replaced by emu
 _i64toa_s
 _i64tow_s
-_initterm_e
+F_ARM_ANY(_initterm_e) ; i386 and x64 _initterm_e replaced by emu
 _invalid_parameter
 _isalnum_l
 _isalpha_l
