crt: Add t_vsscanf test case
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -4236,6 +4236,7 @@ testcase_progs = \
   testcases/t_tls1 \
   testcases/t_trycatch \
   testcases/t_stat_slash \
+  testcases/t_vsscanf \
   testcases/t_wreaddir \
   testcases/t_fseeko64
 
