--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -951,13 +951,13 @@ src_libmingwex=\
   stdio/fopen64.c          stdio/fseeko32.c          stdio/fseeko64.c                                   stdio/ftello.c          \
   stdio/ftello64.c         stdio/ftruncate64.c       stdio/lltoa.c            stdio/lltow.c             stdio/lseek64.c         \
   \
-  stdio/mingw_pformat.h    mingw_sformat.h           \
+  stdio/mingw_pformat.h    mingw_sformat.h           mingw_swformat.h \
   stdio/mingw_fprintf.c    stdio/mingw_fwprintf.c    stdio/mingw_fscanf.c     stdio/mingw_fwscanf.c     stdio/mingw_pformat.c   \
   stdio/mingw_wpformat.c   stdio/mingw_printf.c      stdio/mingw_wprintf.c    stdio/mingw_scanf.c       stdio/mingw_snprintf.c  \
   stdio/mingw_swprintf.c   stdio/mingw_snwprintf.c   stdio/mingw_sprintf.c    stdio/mingw_sscanf.c      stdio/mingw_swscanf.c   \
   stdio/mingw_vfprintf.c   stdio/mingw_vfwprintf.c   stdio/mingw_vfscanf.c    stdio/mingw_vprintf.c     stdio/mingw_vwprintf.c  \
   stdio/mingw_vsnprintf.c  stdio/mingw_vswprintf.c   stdio/mingw_vsnwprintf.c stdio/mingw_vsprintf.c    stdio/mingw_wscanf.c    \
-  stdio/mingw_vfwscanf.c   stdio/mingw_sformat.c     stdio/mingw_vsscanf.c    \
+  stdio/mingw_vfwscanf.c   stdio/mingw_vswscanf.c    stdio/mingw_vsscanf.c    stdio/mingw_sformat.c     stdio/mingw_swformat.c  \
   \
   stdio/snprintf.c         stdio/snwprintf.c         stdio/truncate.c        \
   stdio/ulltoa.c           stdio/ulltow.c            stdio/vasprintf.c        stdio/vfscanf.c           stdio/vfwscanf.c        \
