crt: Define __ms_fprintf function for UCRT
This function is declared in stdio.h but symbol is missing in UCRT import
libraries.

This issue was reported at:
https://github.com/msys2/MINGW-packages/pull/22697#issuecomment-2541206219

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -395,6 +395,7 @@ src_ucrtbase=\
   misc/ucrt-access.c \
   stdio/ucrt_fprintf.c \
   stdio/ucrt_fscanf.c \
+  stdio/ucrt_ms_fprintf.c \
   stdio/ucrt_ms_fwprintf.c \
   stdio/ucrt_fwprintf.c \
   stdio/ucrt_printf.c \
