crt: Fix msvcrt40.dll __(w)getmainargs() ABI for Windows XP and new
All 32-bit Windows NT systems contains system OS library msvcrt40.dll which
should be compatible with the original Visual C++ 4.0/4.1 msvcrt40.dll library.

The Windows NT implementation of msvcrt40.dll is very simple, it just
redirects function calls via symbol forwarding to msvcrt.dll library.

Since Windows XP, the msvcrt.dll changed ABI of __getmainargs() and
__wgetmainargs() functions, and so it is required also for msvcrt40.dll
builds to include ABI fix code which is already used for msvcrt.dll builds.

Windows systems do not provide msvcr40d.dll and neither msvcrtd.dll
libraries, so for these builds there is no need to do new wrappers.
But for simplification of our build system, which does not have separate
source file definitions for msvcrt40.dll and msvcr40d.dll, use same
wrappers also for msvcr40d.dll and msvcrtd.dll.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/lib32/msvcr40d.def.in
+++ b/mingw-w64-crt/lib32/msvcr40d.def.in
@@ -1022,7 +1022,7 @@ __STRINGTOLD
 __dllonexit
 __doserrno
 __fpecode
-__msvcrt40_getmainargs == __getmainargs ; msvcr40d.dll's __getmainargs is incompatible with mingw-w64's __getmainargs, real __getmainargs provided by emu
+__msvcrt_getmainargs == __getmainargs ; msvcr40d.dll's __getmainargs is incompatible with mingw-w64's __getmainargs, real __getmainargs provided by emu
 __isascii
 __iscsym
 __iscsymf
@@ -1063,7 +1063,7 @@ __threadhandle
 __threadid
 __toascii
 __unDName
-__msvcrt40_wgetmainargs == __wgetmainargs ; msvcr40d.dll's __wgetmainargs is incompatible with mingw-w64's __wgetmainargs, real __wgetmainargs provided by emu
+__msvcrt_wgetmainargs == __wgetmainargs ; msvcr40d.dll's __wgetmainargs is incompatible with mingw-w64's __wgetmainargs, real __wgetmainargs provided by emu
 _abnormal_termination
 _access
 _adj_fdiv_m16i ; msvc symbol is without decoration but callee pop stack (like stdcall @4)
