--- a/mingw-w64-crt/lib32/msvcrtd.def.in
+++ b/mingw-w64-crt/lib32/msvcrtd.def.in
@@ -165,7 +165,7 @@ __crtLCMapStringA
 __dllonexit
 __doserrno
 __fpecode
-__msvcrt40_getmainargs == __getmainargs ; msvcrtd.dll's __getmainargs has same API as msvcrt40.dll's __getmainargs, real __getmainargs provided by emu
+__msvcrt_getmainargs == __getmainargs ; msvcrtd.dll's __getmainargs has same API as msvcr40d.dll's __getmainargs, real __getmainargs provided by emu
 __initenv DATA
 __isascii
 __iscsym
@@ -216,7 +216,7 @@ __toascii
 __unDName
 __unguarded_readlc_active DATA
 __wargv DATA
-__msvcrt40_wgetmainargs == __wgetmainargs ; msvcrtd.dll's __wgetmainargs has same API as msvcrt40.dll's __wgetmainargs, real __wgetmainargs provided by emu
+__msvcrt_wgetmainargs == __wgetmainargs ; msvcrtd.dll's __wgetmainargs has same API as msvcr40d.dll's __wgetmainargs, real __wgetmainargs provided by emu
 __winitenv DATA
 _abnormal_termination
 _access
