crt: Split fseeki64.c into _fseeki64.c and _ftelli64.c
File fseeki64.c provides two functions _fseeki64() and _ftelli64().
Function _fseeki64() is available in all CRT ARM versions, including system
msvcrt.dll. For x86 versions, it is available since msvcr80.dll, for system
msvcrt.dll it is disabled for backward compatibility. Function _ftelli64()
is available since msvcr80.dll, and is not part of system msvcrt.dll.

Split this file fseeki64.c into two files _fseeki64.c and _ftelli64.c. And
compile each just for import CRT libraries which do not have required
function. ARM ifdef for _fseeki64 was replaced by not including it into ARM
version of msvcrt.dll.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -332,7 +332,7 @@ src_msvcrt=\
   secapi/_vswprintf_p.c \
   secapi/wmemcpy_s.c \
   secapi/wmemmove_s.c \
-  stdio/fseeki64.c \
+  stdio/_ftelli64.c \
   stdio/mingw_lock.c
 
 src_msvcrt_add_x86=\
@@ -509,6 +509,7 @@ src_msvcrt32=\
   misc/wcstoimax.c \
   misc/wcstoumax.c \
   misc/wctob.c \
+  stdio/_fseeki64.c \
   stdio/_fstat64i32.c \
   stdio/_scprintf.c \
   stdio/_scwprintf.c \
@@ -561,6 +562,7 @@ src_msvcrt64=\
   misc/wcrtomb.c \
   misc/wcsnlen.c \
   misc/wctob.c \
+  stdio/_fseeki64.c \
   string/wcstok.c
 
 # Files included in libmsvcrt-os.a (for msvcrt.dll) on arm32
@@ -783,8 +785,9 @@ src_pre_msvcr80=\
   misc/wcrtomb.c \
   misc/wcsnlen.c \
   misc/wctob.c \
+  stdio/_fseeki64.c \
   stdio/_fstat64i32.c \
-  stdio/fseeki64.c \
+  stdio/_ftelli64.c \
   stdio/mingw_lock.c \
   string/wcstok.c
 
