crt: Remove DllEntryPoint from DLL builds
Function with name DllEntryPoint is entry point of the DLL library,
an alternative or aliased name to DllMainCRTStartup. So calling entry point
(DllEntryPoint) from entry point (DllMainCRTStartup) is just wrong.

Default DLL entry point function varies between compilers/linkers.
Borland C uses DllEntryPoint, GNU LD uses DllMainCRTStartup, MSVC link.exe
uses _DllMainCRTStartup.

The DLL application start function has same name DllMain.

Anyway, if the application is using own custom DLL entry point then it has
to pass appropriate compiler / linker parameters to omit inclusion of
standard library and/or startup files. Therefore removal of DllEntryPoint
should not cause big issues.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -930,7 +930,7 @@ src_msvcr120_app=\
 src_libmingwex=\
   cfguard/mingw_cfguard_support.c \
   \
-  misc/dllentrypoint.c misc/dllmain.c \
+  misc/dllmain.c \
   \
   complex/_cabs.c    complex/cabs.c   complex/cabsf.c   complex/cabsl.c   complex/cacos.c   complex/cacosf.c   \
   complex/cacosl.c   complex/carg.c   complex/cargf.c   complex/cargl.c   complex/casin.c   complex/casinf.c   \
