headers: Redirect __ms_<func> back to plain <func> for UCRT
In principle, we could maybe also do this for CRTs other than
UCRT; there we currently define these aliases in def files.

This fixes breakage after 581532b8e49a0e10cbdfe2332a8c1d61ff3d6820,
noted and discussed at
https://github.com/git-for-windows/build-extra/commit/b1b6eb5c5d78c4d8da53c4daa6aa6cf7dae7f8fb.

Previously, c9eca28decb3aa5213fe22ab1f9883df91d79806 fixed the
initial issues by providing one function as a separate standalone
function, however that approach seems unsustainable to do for all
functions.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-headers/crt/_mingw.h.in
+++ b/mingw-w64-headers/crt/_mingw.h.in
@@ -246,6 +246,12 @@ limitations in handling dllimport attribute.  */
 #define _UCRT
 #endif
 
+#ifdef _UCRT
+#  define __MINGW_UCRT_ASM_CALL(func) __MINGW_ASM_CALL(func)
+#else
+#  define __MINGW_UCRT_ASM_CALL(func)
+#endif
+
 #ifndef _WIN32_WINNT
 #define _WIN32_WINNT @DEFAULT_WIN32_WINNT@
 #endif
