headers: Import wia.h from Wine.
Required for https://github.com/msys2/MINGW-packages/issues/17451

Signed-off-by: Biswapriyo Nath <nathbappai@gmail.com>
Signed-off-by: Jacek Caban <jacek@codeweavers.com>

--- a/mingw-w64-headers/Makefile.am
+++ b/mingw-w64-headers/Makefile.am
@@ -266,6 +266,8 @@ IDL_SRCS = \
   include/rtworkq.idl \
   include/vmr9.idl \
   include/weakreference.idl \
+  include/wia_lh.idl \
+  include/wia_xp.idl \
   include/wincodec.idl \
   include/wincodecsdk.idl \
   include/wmcontainer.idl \
